--- a/styles.css
+++ b/styles.css
@@ -1,131 +1,16 @@
+* {
+    -moz-box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+    box-sizing: border-box;
+    background-repeat: no-repeat;
+}
 
 body {
-    font-family: 'Eagle Lake', cursive;
 }
 
-
-.shake1{
-    height: 880px;
-    text-align: center;
-    background: url('images/group.jpg')no-repeat center left;
-    background-size: cover;
-    background-color: rgba(255,255,255,0.5);
-    background-attachment: fixed !important;
-    z-index: 1;
-    /*opacity: 0.7;*/
+nav {
 
 }
-
-.shake_title{
-    font-size: 80px;
-    color: #e7b404;
-    opacity: 1;
-    text-shadow: 5 5 10px #EDEDED;
-    /*margin-top: 0;*/
-}
-
-.shake_sub_title{
-    font-size: 30px;
-    color: white;
-}
-
-.titles{
-    padding-top: 151px;
-    z-index: 2;
-}
-
-.shake2 {
-     height: 380px;
-    background: url('images/old_paper.jpg')no-repeat center center;
-    background-size: cover;
-    padding: 150px;
-    text-align: center;
-}
-
-h2{
-    font-size: 60px;
-}
-
-img{
-    display: block;
-    padding-top: 50px;
-    margin: 0 auto;
-    width: 30%;
-}
-
-.shake3{
-    height: 680px;
-    background: url('images/knight.png')no-repeat center right;
-    background-size: 30%;
-    background-attachment: fixed !important;
-    padding: 300px 400px 100px 30px;
-    text-align: left;
-    color: green;
-}
-
-.shake3 li {
-
-}
-
-.shake4{
-    height: 680px;
-    background: url('images/hamlet.png')no-repeat center;
-    background-size: cover;
-    background-attachment: fixed !important;
-}
-
-.shake5{
-    height: 280px;
-    background: url('images/old_paper.jpg')no-repeat center center;
-    background-size: cover;
-}
-
-.shake6{
-height: 680px;
-}
-.shake7{
-height: 680px;
-background: url('images/old_paper.jpg')no-repeat center center;
-background-size: cover;
-}
-
-.shake8{
-height: 680px;
-}
-
-.shake9{
-height: 680px;
-background: url('images/fight.jpg') no-repeat center center;
-background-size: 100%;
-background-attachment: fixed !important;
-}
-
-.shake10{
-height: 680px;
-background: url('images/old_paper.jpg')no-repeat center center;
-background-size: cover;
-
-}
-
-.shake11{
-height:680px;
-background: url('images/fight.jpg');
-background-size: cover;
-}
-
-.shake12{
-}
-.shake13{
-}
-.shake14{
-}
-.shake15{
-}
-.shake16{
-}
-.shake17{
-}
-
 
 nav ul{
     width: 100%;
@@ -134,26 +19,139 @@ nav ul{
     top: 0;
     text-align: center;
     padding: 20px;
-    border-bottom: 2px #EDEDED solid;
-    z-index: 4;
-    background-color: white;
+    background-color: #991C1C;
+    z-index: 9;
 }
 
 nav li{
     display: inline;
     padding: 0px 30px;
-    font-size: 25px;
-    font-family: 'Eagle Lake', cursive;
-
+    font-size: 20px;
+    font-family: helvetica;
 }
 
 nav a{
     text-decoration: none;
-    color: #7d173f;
+    color: white;
 }
 
-.logo{
-    font-size: 60px;
-    display: inline;
-    width: 40px;
+.shake1 {
+    height: 880px;
+    background: url('images/group.jpg')no-repeat;
+    background-size: cover;
+    background-attachment: fixed;
+    background-position: 0px -280px;
+    padding-top: 130px;
+    padding-left: 25px;
+}
+
+.openbook {
+    position: absolute;
+    top: 100px;
+    left: 250px;
+}
+
+.headlines {
+    max-width: 510px;
+    background-color: #FCCA3F;
+    padding: 20px;
+    border-radius: 20px;
+    border: 4px solid #991C1C;
+
+}
+
+
+h1, h2, h3, h4 {
+        font-family: 'Eagle Lake', cursive;
+        color: #991C1C;
+}
+
+.banner {
+    position: fixed;
+    top: 60px;
+    right: 100px;
+    z-index: 10;
+
+}
+
+.price {
+    position: absolute;
+    top: 20px;
+    right: 30px;
+    font-family: 'Racing Sans One', cursive;
+    font-size: 2.8em;
+    line-height: 1em;
+
+}
+
+
+.quotes {
+    height: 185px;
+    background-color: #FCCA3F;
+    font-family: 'Eagle Lake', cursive;
+    padding: 20px 75px 20px 75px;
+    color: #991C1C;
+}
+
+
+.shake2 {
+    height: 1300px;
+    background: url('images/fight.jpg')no-repeat;
+    background-size: cover;
+    background-position: center center;
+    background-attachment: fixed;
+    padding-top: 75px;
+    text-align: center;
+
+}
+
+
+
+.author {
+    width: 50%;
+    margin: 0 auto;
+    background-color: rgba(255,255,255, 0.8);
+    padding: 25px;
+    text-align: left;
+}
+
+
+
+.shake3 {
+    height: 1300px;
+    background: url('images/hamlet with ghosts.jpg')no-repeat;
+    background-size: cover;
+    background-position: center center;
+    background-attachment: fixed;
+    padding-top: 75px;
+    text-align: center;
+}
+
+.collaborators {
+    width: 50%;
+    margin: 0 auto;
+    background-color: rgba(255,255,255, 0.8);
+    padding: 25px;
+    text-align: left;
+}
+
+.shake4 {
+    height: 880px;
+    background: url('images/old_paper.jpg')no-repeat;
+    background-size: cover;
+    background-attachment: fixed;
+    margin: 0px 0px;
+
+}
+
+.shake4 h2{
+    margin-top: 0px;
+    text-align: center;
+    padding-top: 80px;
+    color: ;
+
+}
+@media screen and (min-width: 800px) {
+    body {
+    }
 }
